--- a/src/app/core/kot-print-config/kot-print-config.component.html
+++ b/src/app/core/kot-print-config/kot-print-config.component.html
@@ -3,61 +3,58 @@
 
 <p class="subhead">KOT Printer</p>
 
-<select class="form-select" aria-label="Default select example" style="width: fit-content;">
-    <option selected>Transaction Type</option>
-    <option value="1">Online</option>
-    <option value="2">Dine In</option>
-    <option value="3">Home Delivery</option>
-    <option value="4">Take Away</option>
-  </select>
+
+
+<div>
+    <select class="form-select" aria-label="Default select example" style="width: fit-content;" >
+        <option >Transaction Type</option>
+        <option *ngFor="let trnasctn of transactiontypes">{{trnasctn.transactionName}}</option>
+    </select>
+</div>
 
 
 
   <div class="threesections">
 
    <div class="sec1 firstsec">
-     <div class="selectall">
+     <div class="subdiv">
         <h4>Group</h4>
-        <p>
-            <input type="checkbox" name="" id=""><span>Select All</span>
-        </p>
+        <span>
+            <input type="checkbox">
+            Select All
+        </span>
      </div>
      <div class="lists">
-        <p><span><input type="checkbox"></span>Beverages</p>
-        <p><span><input type="checkbox"></span>EGG Items</p>
-        <p><span><input type="checkbox"></span>indian breads</p>
-        <p><span><input type="checkbox"></span>mutton,fish & prawns gravies</p>
-        <p><span><input type="checkbox"></span>nonveg biryanis</p>
-        <p><span><input type="checkbox"></span>nonveg gravies</p>
-        <p><span><input type="checkbox"></span>nonveg starters</p>
-        <p><span><input type="checkbox"></span>soups</p>
-        <p><span><input type="checkbox"></span>tandoori</p>
-        <p><span><input type="checkbox"></span>veg biryanis</p>
-        <p><span><input type="checkbox"></span>veg gravies</p>
-        <p><span><input type="checkbox"></span>veg starters</p>
+
+        <p *ngFor="let sub of subcategory">
+            <span><input type="checkbox" value="{{sub.subcategoryId}}" (change)="onChange($event)" ></span>
+            {{sub.subcategoryName}}
+        </p>
+        
      </div>
    </div>
 
 
+
    <div class="sec1 sec2">
-    <div class="selectall">
+    <div class="subdiv">
         <h4>Items</h4>
-        <p>
-            <input type="checkbox" name="" id=""><span>Select All</span>
-        </p>
+        <span>
+            <input type="checkbox">
+            Select All
+        </span>
      </div>
     <div class="lists">
-       <p><span><input type="checkbox"></span>water bottle</p>
-       <p><span><input type="checkbox"></span>sprite</p>
-       <p><span><input type="checkbox"></span>thumsup</p>
-       <p><span><input type="checkbox"></span>coke</p>
-       <p><span><input type="checkbox"></span>juice</p>
-       <p><span><input type="checkbox"></span>maza</p>
+       <p *ngFor="let sub of items">
+           <span><input type="checkbox" ></span>
+           {{sub.item_name}}
+       </p>
     </div>
   </div>
 
 
   <div class="sec1 sec3">
+
    <div class="d-flex">
     <h4>Printer</h4>
     <input type="text" class="inputbox">
@@ -65,36 +62,19 @@
    </div>
 
 
-<div class="lists">
-    <div style="justify-content: space-between !important;display: flex;">
-        <span><input type="checkbox"></span>
-        <p style="border: 0;margin-right: auto !important;">send to OneNote 16</p>
-        <p style="border: 0;"><i class="fa-solid fa-trash"></i></p>
+<div class="printers-part">
+    <div class="lists" >
+
+    <div style="justify-content: space-between !important;display: flex;" *ngFor="let printer of printernames" class="innerdiv">
+        <input type="checkbox" class="inputbox" >
+        <p style="border: 0;margin-right: auto !important;">{{printer.printer_name}}</p>
+        <p style="border: 0;"><i class="fa-solid fa-trash" (click)="delprinter(printer.id)"></i></p>
     </div>
-    <div style="justify-content: space-between !important;display: flex;">
-        <span><input type="checkbox"></span>
-        <p style="border: 0;margin-right: auto !important;">send to OneNote 16</p>
-        <p style="border: 0;"><i class="fa-solid fa-trash"></i></p>
-    </div>
-    <div style="justify-content: space-between !important;display: flex;">
-        <span><input type="checkbox"></span>
-        <p style="border: 0;margin-right: auto !important;">send to OneNote 16</p>
-        <p style="border: 0;"><i class="fa-solid fa-trash"></i></p>
-    </div>
-    <div style="justify-content: space-between !important;display: flex;">
-        <span><input type="checkbox"></span>
-        <p style="border: 0;margin-right: auto !important;">send to OneNote 16</p>
-        <p style="border: 0;"><i class="fa-solid fa-trash"></i></p>
-    </div>
-    <div style="justify-content: space-between !important;display: flex;">
-        <span><input type="checkbox"></span>
-        <p style="border: 0;margin-right: auto !important;">send to OneNote 16</p>
-        <p style="border: 0;"><i class="fa-solid fa-trash"></i></p>
-    </div>
+
+</div>
 </div>
 
 
- 
 
 
 <div class="modal-footer">
