--- a/src/app/core/settingspage/settingspage.component.html
+++ b/src/app/core/settingspage/settingspage.component.html
@@ -16,10 +16,10 @@
 
   <div class="d-flex mt-4 mb-3 colm-mv" style="align-items: center;">
     <h3 class="mt-1 rolename" style="color: red;">User Name</h3>
-    <select class="form-select" (change)="userId($event)" aria-label="Default select example"
+    <select class="form-select" (change)="changeuserId($event)" aria-label="Default select example"
       style="width: fit-content;border: 1px solid green;">
       <option value="">--select--</option>
-      <option *ngFor="let data of allUser" value="{{data.id}}">{{data.login_id}}</option>
+      <option *ngFor="let data of access" value="{{data.id}}">{{data.full_name}}</option>
       <!-- <option value="2">Cashier</option> -->
     </select>
   </div>
@@ -37,8 +37,15 @@
 </form> -->
 
 <!-- <button (click)="addControl()">Add Dynamic Data Field</button> -->
+<!-- <form action="" [formGroup]="formCheck" (ngSubmit)="post"></form> -->
+<div  *ngFor="let control of checkboxOptions; let i = index">
+  <input type="checkbox" [(ngModel)]="control.checked" [checked] ='control.checked'  > {{control.label}}
+  
 
 
+
+</div>
+<button (click)="postAccessLevels()">Save</button>
 
     <!-------fileds-------->
 
